--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,7 @@
 
 body{
   font-family: 'Roboto', sans-serif;
+  font-display: auto;
 }
 
 #mainTitle{
@@ -36,7 +37,7 @@ nav {
 
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
-  font-size: 1.75em;
+  font-size: 150%;
   text-align: justify;
 
   width: 100%;
